Fixed UpStream Issue : #850 (Usernames need wrapping in Projects table)

--- a/templates/assets/css/upstream.css
+++ b/templates/assets/css/upstream.css
@@ -436,6 +436,7 @@ td .btn {
 
 .upstream-front-end table {
     font-size: 13px;
+    table-layout: fixed;
 }
 
 /* sortable */
